Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1440,4 +1440,5 @@
         }
     </script>
 </body>
+<meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
 </html>
