Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,11 @@
                 }
             });
         }
+        <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
     </script>
+    <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
 </body>
 <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
 </html>
+<meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
+
