--- a/index.html
+++ b/index.html
@@ -1436,12 +1436,14 @@
                     card.style.transform = 'translateY(20px)';
                     setTimeout(() => card.style.display = 'none', 400);
                     <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
+                 <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
                 }
             });
         }
     </script>
 </body>
 </html>
+
 
 
 
