--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería Santa Catalina | Envíos y Pedidos</title>
     <meta name="description" content="La mejor carne cruda y fresca en Resistencia, Chaco. Cortes tradicionales, achuras y envíos a todo el país.">
+    <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
     
     <!-- Fuentes Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1443,6 +1444,7 @@
     </script>
 </body>
 </html>
+
 
 
 
