--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería Santa Catalina | Envíos y Pedidos</title>
     <meta name="description" content="La mejor carne cruda y fresca en Resistencia, Chaco. Cortes tradicionales, achuras y envíos a todo el país.">
+    
+    <!-- ETIQUETA DE VERIFICACIÓN DE GOOGLE (Correctamente colocada en el Head) -->
     <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
     
     <!-- Fuentes Google -->
@@ -1436,16 +1438,10 @@
                     card.style.opacity = '0';
                     card.style.transform = 'translateY(20px)';
                     setTimeout(() => card.style.display = 'none', 400);
-                    <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
-                 <meta name="google-site-verification" content="PK_9zKNs2D1nJ1l8Aj5lcQd4DQn9iiYS2pStwYZt-HA" />
+                    // Eliminadas las etiquetas meta que estaban mal colocadas aquí
                 }
             });
         }
     </script>
 </body>
 </html>
-
-
-
-
-
