--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                 nombre: "Cuadrada",
                 categoria: "vacuna",
                 precio: 10000,
-                imagen: "https://res.cloudinary.com/dihwnqgwd/image/upload/v1770858563/Gemini_Generated_Image_65j9r365j9r365j9_tqlfvg.png",
+                imagen: "https://res.cloudinary.com/dihwnqgwd/image/upload/v1770911829/Cuadrada-x-1-Kg_qd10xd.webp",
                 descripcion: "Corte delantero. Ideal para milanesas o picadillo.",
                 badge: "Vacuna"
             },
@@ -1445,3 +1445,4 @@
     </script>
 </body>
 </html>
+
