Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnicería Santa Catalina | Envíos y Pedidos</title>
-    
-    <!-- Meta Descripción -->
     <meta name="description" content="La mejor carne cruda y fresca en Resistencia, Chaco. Cortes tradicionales, achuras y envíos a todo el país.">
     
     <!-- ETIQUETA DE VERIFICACIÓN DE GOOGLE -->
@@ -1446,4 +1444,3 @@
     </script>
 </body>
 </html>
-
